Gunzip things with content-encoding:gzip whose file extension is .zip when saving or running helpers.  The idea here is to decompress unless the encoding and extension match up.  If they do, then don't decompress.  Bug 152275, r=biesi, sr=darin